WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112052
Absolute position div without width specified does not reflow its text when it is moved (and computed width changes)
https://bugs.webkit.org/show_bug.cgi?id=112052
Summary
Absolute position div without width specified does not reflow its text when i...
toby schachman
Reported
2013-03-11 12:47:24 PDT
I have an absolute position'ed div with left specified but not width or right. When I change its left style attribute in JS, its computed width (via window.getComputedStyle) changes as expected. However the text within the div does not reflow as expected. Firefox does reflow the text correctly.
Attachments
Patch
(6.59 KB, patch)
2013-03-17 02:37 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Robert Hogan
Comment 1
2013-03-17 02:37:13 PDT
Created
attachment 193460
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-20 00:18:30 PDT
Comment on
attachment 193460
[details]
Patch Clearing flags on attachment: 193460 Committed
r146308
: <
http://trac.webkit.org/changeset/146308
>
WebKit Review Bot
Comment 3
2013-03-20 00:18:33 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug