Absolute position div without width specified does not reflow its text when it is moved (and computed width changes) https://bugs.webkit.org/show_bug.cgi?id=112052

Source/WebCore:

Reviewed by Emil A Eklund.

If a positioned block has auto width then any movement means the block needs to be resized.

Test: fast/block/positioned-block-auto-width-movement.html

* rendering/style/RenderStyle.cpp:
(WebCore::positionedObjectMoved):
(WebCore::RenderStyle::diff):

LayoutTests:

Reviewed by Emil A Eklund.

* fast/block/positioned-block-auto-width-movement-expected.html: Added.
* fast/block/positioned-block-auto-width-movement.html: Added.


Canonical link: https://commits.webkit.org/131102@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@146308 268f45cc-cd09-0410-ab3c-d52691b4dbfc